<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="sale">Sale</string>
    <string name="shipment">Receive</string>
    <string name="quantity">Quantity Available:</string>
    <string name="order_qty">Order Quantity:</string>
    <string name="hint">0</string>
    <string name="order_button">Order More</string>
    <string name="delete_button">Delete Product</string>
    <string name="add_product_button">Add Product</string>
    <string name="no_data">Unable to locate any products in database, click button below to add a product to your inventory database!</string>
    <string name="product_name">Product Name:</string>
    <string name="price">Price (in USD):</string>
    <string name="hint_add_product">Name of Product</string>
    <string name="hint_qty">0</string>
    <string name="hint_price">$0.00</string>
    <string name="product_name_add">Product:</string>
    <string name="add_picture">Product Image Location:</string>
    <string name="add_image_button">Upload Image</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hint_product_info">Details about product</string>
    <string name="product_info">Product Info:</string>
    <string name="editor_insert_product_successful">Product Saved Successfully</string>
    <string name="editor_insert_product_failed">Product Save FAILED</string>
    <string name="editor_update_product_failed">Update product FAILED</string>
    <string name="editor_update_product_successful">Product Update Successful</string>
    <string name="unsaved_changes_dialog_msg">Attention: Unsaved Changes</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Continue Editing</string>
    <string name="save">Save</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="missing_data">More Data Required to Save Product</string>
    <string name="hint_email">Enter Email Here</string>
    <string name="order_email">Product Email:</string>
    <string name="hint_file_location">Enter IMG File Location</string>
    <string name="save_database">Save Database</string>
</resources>
